Fix cod and pickup point not showing in admin order Pakettikauppa meta box

--- a/assets/css/wc-pakettikauppa-admin.css
+++ b/assets/css/wc-pakettikauppa-admin.css
@@ -12,6 +12,10 @@ p.pakettikauppa-shipment {
   margin: 10px 0 5px;
 }
 
+.pakettikauppa-services {
+    overflow-x: hidden;
+}
+
 .pakettikauppa-services p#wc-pakettikauppa-cod-amount-wrapper,
 .pakettikauppa-services p#wc-pakettikauppa-cod-reference-wrapper,
 .pakettikauppa-services p#wc-pakettikauppa-pickup-points-wrapper
